# AGE-YOLO

./: .gitignore  README.md  detect.py  pyproject.toml  requirements.txt  test.py  train.py  val.py
dataset/: README.md  folder_structure.txt  gc10_data.yaml  hripcb_data.yaml  neu_data.yaml  testlist_gc10.txt  testlist_hripcb.txt  testlist_neu.txt
tools/: augment_train.py  split_data.py  xml2yolo.py
ultralytics/cfg/models/: age_yolo.yaml
ultralytics/nn/: tasks.py
ultralytics/nn/extra_modules/: block.py  head.py
ultralytics/nn/modules/: __init__.py  age_yolo_modules.py
